# netlify-rusty-bunny

./: Cargo.toml  Makefile  README.md  rust-toolchain
public/: index.html
src/: main.rs
