[package]
name = "bunny"
version = "0.1.0"
authors = ["Joe Previte", "Shriram Balaji <shrirambalaji1996@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netlify_lambda_http = "0.2"
percent-encoding = "2.1.0"
rocket = "0.4.4"
tokio = { version = "1.0.1", features = ["macros"] }